--- a/pollapp/pollApp/polls/templates/polls/detail.html
+++ b/pollapp/pollApp/polls/templates/polls/detail.html
@@ -1,4 +1,6 @@
 <h1> {{ question.question_text }} </h1>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"/>
 
 {% if error_message %}<p><strong>{{error_message}}</strong></p>{% endif %}
 
