--- a/pollapp/pollApp/polls/templates/polls/index.html
+++ b/pollapp/pollApp/polls/templates/polls/index.html
@@ -2,11 +2,11 @@
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"/>
 
 {% if latest_question_list %}
-  <ol>
+  <ul>
     {% for question in latest_question_list %}
-      <li><a href="{% url 'polls:detail' question.id %}>">{{ question.question_text }}</a></li>
+      <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
-  </ol>
+  </ul>
 {% else %}
   <p>No polls are available.</p>
 {% endif %}
