--- a/pollapp/pollApp/polls/templates/polls/results.html
+++ b/pollapp/pollApp/polls/templates/polls/results.html
@@ -1,9 +1,12 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"/>
+
 <h1>{{ question.question_text}}</h1>
 
-  <ol>
+  <ul>
     {% for choice in question.choice_set.all%}
-      <li>{{choice.choice_text}} -- {{choice.votes}} vote{{ choice.votes|pluaralize }</li>
+      <li>{{choice.choice_text}} -- {{choice.votes}} vote{{ choice.votes|pluralize }}</li>
     {% endfor %}
-  </ol>
+  </ul>
 
 <a href="{% url 'polls:detail' question.id %}"> Vote again?</a>
